--- a/app/views/template/fields.html
+++ b/app/views/template/fields.html
@@ -65,7 +65,7 @@
     <div class="column-one-third">
       <div class="status">
 
-        <p><a href="#">Preview template</a></p>
+        <p><a href="/preview/template/{{ template.slug }}">Preview template</a></p>
 
         <hr />
 
