--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -17,8 +17,58 @@
     {% if not accrediting.selfAccrediting %}<span class="heading-secondary">Accredited by {{ accrediting.name }}</span>{% endif %}
   </h1>
 
-  <!-- <dl class="aligned" style="margin-top: 60px;">
-    <dt>Website:</dt>
+  {{ course.options[0] }}
+
+  <dl class="aligned" style="margin-top: 60px;">
+    <dt>Course offered:</dt>
+    <dd>
+      {% if previewingTemplate %}
+        Varies depending on course
+      {% else %}
+        {{ course.options[0] }}
+      {% endif %}
+    </dd>
+    <dt>Qualification:</dt>
+    <dd>
+      {% if previewingTemplate %}
+        Varies depending on course
+      {% else %}
+        <details role="group">
+          {% if 'PGCE' in course.options[0] %}
+            <summary style="margin-bottom: 0;" role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">PGCE with Qualified teacher status (QTS)</span></summary>
+
+            <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
+                <p>A postgraduate certificate in education (PGCE) with qualified teacher status (QTS) allows you to teach in England, Scotland, Wales and Northern Ireland.</p>
+                <p>This qualification is also recognised internationally.</p>
+                <p>Many PGCE courses include credits that count toward a Master’s degree.</p>
+            </div>
+          {% else %}
+            <summary style="margin-bottom: 0;" role="button" aria-controls="details-content-0" aria-expanded="true"><span class="summary">Qualified teacher status (QTS)</span></summary>
+
+            <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="false">
+                <p>Qualified teacher status (QTS) allows you to teach in state schools in England.</p>
+                <p>If you want to teach in the rest of the UK or internationally, consider a course that gives you the qualification 'postgraduate certificate in education with qualified teacher status' instead.</p>
+            </div>
+          {% endif %}
+        </details>
+      {% endif %}
+    </dd>
+    <dt>Study type and course length:</dt>
+    <dd>
+      {% if previewingTemplate %}
+        Varies depending on course
+      {% else %}
+        {{ data[prefix + '-duration'] or '1 year' }}
+        {% if 'full' in course.options[0] %}
+          full time
+        {% else %}
+          part time
+        {% endif %}
+      {% endif %}
+    </dd>
+    <dt>Date you can apply from:</dt>
+    <dd>26 October 2018</dd>
+    <dt>Provider website:</dt>
     <dd>
       {% if (data[subject.slug + '-' + accrediting.slug + '-course-website']) %}
         <a href="{{ data[subject.slug + '-' + accrediting.slug + '-course-website'] }}">{{ data[subject.slug + '-' + accrediting.slug + '-course-website'] }}</a>
@@ -26,64 +76,53 @@
         <a href="{{ data[subject.slug + '-' + accrediting.slug + '-course-website'] }}">{{ data['website'] }}</a>
       {% endif %}
     </dd>
-    <dt>Courses offered:</dt>
-    <dd>
-      <ul class="list">
-        {% for option in subject.folded_course.options %}
-          <li>{{ option }}</li>
-        {% endfor %}
-      </ul>
-    </dd>
-  </dl> -->
+  </dl>
 
   <div class="grid-row">
     <div class="column-two-thirds">
       <div class="course-contents">
-        <h2 class="heading-medium">Contents</h2>
+        <h2 class="heading-small">Contents</h2>
         <ul class="list">
-          <li><a href="#section-about">About the training provider</a></li>
-          <li><a href="#course-options">Courses offered</a></li>
+          <li><a href="#section-about">About the course</a></li>
           <li><a href="#section-entry">Requirements</a></li>
+          <li><a href="#section-schools">How school placements work</a></li>
+          {% if data[prefix + '-interview-process'] %}
+            <li><a href="#section-interview">Interview process</a></li>
+          {% endif %}
+          <li><a href="#section-fees">Fees</a></li>
           <li><a href="#section-financial-support">Financial support</a></li>
+          <li><a href="#section-about">About the training provider</a></li>
           <li><a href="#section-contact">Contact details</a></li>
           <li><a href="#section-apply">Apply</a></li>
         </ul>
 
-        <h3 class="heading-medium remove-bottom-margin" id="section-option">{{ course.options }}</h3>
-        <details role="group" class="add-bottom-margin">
-            {% if 'PGCE' == false %}
-              <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">Postgraduate certificate in education with qualified teacher status (PGCE with QTS)</span></summary>
-
-              <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
-                  <p>A postgraduate certificate in education (PGCE) with qualified teacher status (QTS) allows you to teach in England, Scotland, Wales and Northern Ireland.</p>
-                  <p>This qualification is also recognised internationally.</p>
-                  <p>Many PGCE courses include credits that count toward a Master’s degree.</p>
-              </div>
-            {% else %}
-              <summary role="button" aria-controls="details-content-0" aria-expanded="true"><span class="summary">Qualified teacher status (QTS)</span></summary>
-
-              <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="false">
-                  <p>Qualified teacher status (QTS) allows you to teach in state schools in England.</p>
-                  <p>If you want to teach in the rest of the UK or internationally, consider a course that gives you the qualification 'postgraduate certificate in education with qualified teacher status' instead.</p>
-              </div>
-            {% endif %}
-        </details>
-
-        <dl class="aligned" style="margin-bottom: 30px">
-          {% if (data[prefix + '-course-website']) %}
-          <dt>Website:</dt>
-          <dd>
-            <a href="{{ data[prefix +'-course-website'] }}">{{ data[prefix + '-course-website'] }}</a>
-          </dd>
-          {% endif %}
-          <dt>Course length:</dt>
-          <dd>{{ data[prefix + '-duration'] }}</dd>
-        </dl>
-
-        <h4 class="heading-small" id="section-about">About the course</h4>
+        <h2 class="heading-medium" id="section-about">About the course</h2>
         {{ macros.previewPart(prefix + '-about-this-course') }}
 
-        <h4 class="heading-small">Fees</h4>
+        <h2 class="heading-medium" id="section-entry">Requirements</h2>
+
+        <h3 class="heading-small">Qualifications</h3>
+        {{ macros.previewPart(prefix + '-qualifications-required') }}
+
+        {% if data[prefix + '-personal-qualities'] %}
+          <h3 class="heading-small">Personal qualities</h3>
+          {{ macros.previewPart(prefix + '-personal-qualities') }}
+        {% endif %}
+
+        {% if data[prefix + '-other-requirements'] %}
+          <h3 class="heading-small">Other requirements</h3>
+          {{ macros.previewPart(prefix + '-other-requirements') }}
+        {% endif %}
+
+        <h2 class="heading-medium" id="section-schools">How school placements work</h2>
+        {{ macros.previewPart(prefix + '-placement-school-policy') }}
+
+        {% if data[prefix + '-interview-process'] %}
+          <h2 class="heading-medium" id="section-interview">Interview process</h2>
+          {{ macros.previewPart(prefix + '-interview-process') }}
+        {% endif %}
+
+        <h2 class="heading-medium" id="section-fees">Fees</h2>
         <p>The course fees for 2018/2019 are as follows:</p>
         <div class="body-text">
           <table>
@@ -110,46 +149,23 @@
           </table>
         </div>
 
-        {% if data[prefix + '-interview-process'] %}
-          <h4 class="heading-small">Interview process</h4>
-          {{ macros.previewPart(prefix + '-interview-process') }}
-        {% endif %}
+        <h2 class="heading-medium" id="section-financial-support">Financial support</h3>
+        <p>Not available in this prototype.</p>
 
-        <h4 class="heading-small">How school placements work</h4>
-        {{ macros.previewPart(prefix + '-placement-school-policy') }}
-
-        <h2 class="heading-large" id="section-entry">Requirements</h2>
-
-        <h3 class="heading-medium">Qualifications</h3>
-        {{ macros.previewPart(prefix + '-qualifications-required') }}
-
-        {% if data[prefix + '-personal-qualities'] %}
-          <h3 class="heading-medium">Personal qualities</h3>
-          {{ macros.previewPart(prefix + '-personal-qualities') }}
-        {% endif %}
-
-        {% if data[prefix + '-other-requirements'] %}
-          <h3 class="heading-medium">Other requirements</h3>
-          {{ macros.previewPart(prefix + '-other-requirements') }}
-        {% endif %}
-
-        <h2 class="heading-large" id="section-financial-support">Financial support</h3>
-        <p>Not available in this prototype yet.</p>
-
-        <h2 class="heading-large" id="section-about-provider">About the training provider</h2>
+        <h2 class="heading-medium" id="section-about-provider">About the training provider</h2>
         {{ macros.previewPart('about-organisation') }}
 
         {% if not accrediting.selfAccrediting %}
           {% if data[accrediting.slug + '-about-accrediting-provider'] %}
-            <h3 class="heading-medium">About {{ accrediting.name }}</h3>
+            <h3 class="heading-small">About {{ accrediting.name }}</h3>
             {{ macros.previewPart(accrediting.slug + '-about-accrediting-provider') }}
           {% endif %}
         {% endif %}
 
-        <h3 class="heading-medium">Training with a disability</h3>
+        <h3 class="heading-small">Training with a disability</h3>
         {{ macros.previewPart('training-with-a-disability') }}
 
-        <h2 class="heading-large" id="section-contact">Contact details</h2>
+        <h2 class="heading-medium" id="section-contact">Contact details</h2>
 
         <dl class="aligned">
           <dt>Email:</dt>
@@ -167,7 +183,7 @@
           </dd>
         </dl>
 
-        <h2 class="heading-large" id="section-apply">Apply</h2>
+        <h2 class="heading-medium" id="section-apply">Apply</h2>
 
         <a href="#" class="button">Apply</a>
       </div>
