--- a/app/views/template/fields.html
+++ b/app/views/template/fields.html
@@ -26,7 +26,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <div class="course-parts course-parts--large add-top-margin">
+      <div class="course-parts course-parts--large">
         <ul class="course-parts-items">
           <li class="course-parts-item">
             <h3 class="course-part-task">About this course</h3>
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="column-one-third">
-      <div class="status">
+      <div class="status-box">
 
         <p><a href="/preview/template/{{ template.slug }}">Preview template</a></p>
 
