--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -32,6 +32,11 @@ table thead th {
   padding: 20px;
 }
 
+.status-box {
+  border: 5px solid #ddd;
+  padding: 20px;
+}
+
 // Related items
 // (These styles will be moved to GOV.UK elements, duplicating here for now.)
 .govuk-related-items {
