Add template documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,6 +18,13 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/templates">Course templates</a>
+      </h3>
+      <p>
+        Use templates to share information between courses.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/about-your-organisation">Shared organisation details</a>
       </h3>
       <p>
