--- a/app/views/templates.html
+++ b/app/views/templates.html
@@ -10,10 +10,11 @@
   <h2 class="heading-large">
     Course templates
   </h2>
-  <p>Use templates to share information between courses.</p>
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <p>You can copy the same information to different courses by creating a template. This means you won’t have to add this information individually for each course. For example, you can create a template for all your QTS salaried courses and another for your PGCE with QTS courses.</p>
+
       {% if data['templates'].length > 0 %}
       <div class="body-text add-double-bottom-margin">
         <table>
@@ -38,7 +39,12 @@
       {% endif %}
 
       <p>
-        <a href="/template/new" class="button">Create new template</a>
+        <a href="/template/new" class="button">
+          {% if data['templates'].length == 0 %}
+            Create your first template
+          {% else %}
+            Create new template
+          {% endif %}</a>
       </p>
     </div>
   </div>
