Make “don't use a template" work

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -54,7 +54,7 @@
         <a href="/templates">Create your first template</a>
       </p>
       <hr />
-      <a href="/templates">Don’t use a template</a>
+      <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}/no-template">Don’t use a template</a>
       {% else %}
       <h2 class="heading-large remove-top-margin">Pick a course template</h2>
       {% include "course/_pick-template-choices.html" %}
