--- a/app/views/course.html
+++ b/app/views/course.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title %}{{ course.name }} ({{ course.programmeCode }}){% endset %}
+{% set title %}{{ course.name | safe }} ({{ course.programmeCode }}){% endset %}
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
