Update beta message to refer to prototype

--- a/app/views/includes/phase_banner_beta.html
+++ b/app/views/includes/phase_banner_beta.html
@@ -1,6 +1,6 @@
 <div class="phase-banner">
   <p>
     <strong class="phase-tag">BETA</strong>
-    <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</span>
+    <span>This is a prototype of a new service. Some parts of this prototype do not work yet.</span>
   </p>
 </div>
