Fix preview copy

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -10,13 +10,13 @@
     <a href="/template/{{ template.slug }}" class="link-back">Back to template</a>
 
     <div class="status-box add-top-margin">
-      This is a preview of template: {{ template.name }}
+      This is a preview of a template: {{ template.name }}
     </div>
   {% else %}
     <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" class="link-back">Back to course</a>
 
     <div class="status-box add-top-margin">
-      This is a preview of course: {{ course.name }} ({{ course.programmeCode }}).
+      This is a preview of a course: {{ course.name }} ({{ course.programmeCode }}).
     </div>
   {% endif %}
 
