Improve approval copy

--- a/app/views/template/fields.html
+++ b/app/views/template/fields.html
@@ -85,7 +85,7 @@
 
         <hr />
 
-        <p>Before courses using this template can be published DfE must approve it.</p>
+        <p>You will need approval from DfE to publish this template.</p>
         <a href="#" class="button">Submit for approval</a>
       </div>
     </div>
