Fix template page title

--- a/app/views/template/fields.html
+++ b/app/views/template/fields.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% set title = template.name %}
-{% block page_title %}{{ template }}{% endblock %}
+{% block page_title %}Template: {{ template.name }}{% endblock %}
 
 {% block content %}
 
