Update new template copy

--- a/app/views/template/new.html
+++ b/app/views/template/new.html
@@ -14,9 +14,13 @@
         {{ title }}
       </h1>
 
-      <p class="lede">Use templates to share information between courses.</p>
+      <p>Use templates to share information across courses.</p>
 
-      <p>Try to use different templates for each type of course on offer. Be clear about how one type of course differs from another. For example, create one template for your QTS salaried courses and another for your PGCE with QTS ones.</p>
+      <p>You should create a separate template for each type of course you offer. Eg, one template for all your QTS salaried courses and one for all your PGCE with QTS ones.</p>
+
+      <p>Give your template a name that describes the type of course it relates to.</p>
+
+      <p>After you’ve created your template, you’ll be able to apply it to your relevant courses through a clickable list.</p>
 
       <form action="/template/new" method="post">
         {{ macros.textboxWithoutValue('template-name', 'Template name', 'For example: Secondary PGCE courses') }}
