Add note on UCAS

--- a/app/views/history/templates/index.html
+++ b/app/views/history/templates/index.html
@@ -30,6 +30,11 @@
 
       <h2 class="heading-large">Template limits and risks</h2>
       <p>Because a template includes all course fields it might be inappropriate to use them across certain courses. For example, by setting the fees on a template to those of a PGCE course (£9,000), this template shouldn’t then be applied to a QTS course – which costs less. There's a risk that users could apply these templates wrongly and show incorrect information to users.</p>
+
+      <h2 class="heading-large">Templates in UCAS</h2>
+      <p>There’s some concept of a template in the tool provided by UCAS. Users can select a training programme from which they can copy fields. Though once a copy has been made no subsequent edits are updated – users must resort to copy and paste again.</p>
+
+      <p><a href="https://www.ucas.com/file/115116/download?token=Du-edwFy">UCAS documentation for ‘Entry profiles’</a></p>
     </div>
   </div>
 
