Add updated docs on folding

--- a/app/views/history/imported-from-ucas.html
+++ b/app/views/history/imported-from-ucas.html
@@ -101,7 +101,7 @@
       <p>Salaried courses are always presented as their own course on UCAS. Considering a school that has 8 places available, 4 funded with salary and 4 not – it would seem appropriate to merge these two courses into one.</p>
 
       <h4 class="heading-small">Folding on schools</h4>
-      <p>Where schools have been given there own subject course by their training provider, these can be combined into a single course – as though they were one couse on UCAS with multiple campus options.</p>
+      <p>Where schools have been given their own subject course by their training provider, these can be combined into a single course – as though they were one couse on UCAS with multiple campus options.</p>
 
       <h4 class="heading-small">Salaries and schools</h4>
       <p>If there are schools for a salaried course and different schools for unsalaried, how can that be represented? When we show "4 miles to nearest school" in search results, that may not be for a salaried school – prescient if a user has filtered by salary.</p>
