--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -37,15 +37,42 @@
 
       <p>The top-level school and organisation links in the header have been removed as it’d be ambiguous which organisation they’d link to. The ‘Publish teacher training courses’ link goes to the organisations page.</p>
 
-      <p>Access requests are still per-organisation.</p>
+      <h2 class="heading-medium">Requesting access for someone</h2>
 
-      <h2 class="heading-medium">Notes</h2>
+      <p>Access requests need a design update for multiple organisations. As a user with access to multiple organisations I need to request access for other people so that they can either have the same access as me, or have access to a specific organisation.</p>
+
+      <a href="https://dfedigital.atlassian.net/browse/BATSA-451">BATSA-451</a>
+
+      <h2 class="heading-medium">Organisations without courses</h2>
+      <p>Some courses will have no courses because:</p>
+      <ul class="list list-bullet">
+        <li>they are new</li>
+        <li>they are set up in UCAS so they can be listed as an accrediting provider</li>
+      </ul>
+      <p>This needs design work.</p>
+
+      <a href="https://dfedigital.atlassian.net/browse/BATSA-476">BATSA-476</a>
+
+      <h2 class="heading-medium">Updated header</h2>
 
       <p>The name against the sign out link should be the DfE user, not the organisation – this is for all users.</p>
 
-      <p>We’ve avoided adding supporting copy pending a round of research to see how well this is understood.</p>
+      <h2 class="heading-medium">User research</h2>
 
-      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-401">BATSA-401</a></p>
+      <p>We tested multiple organisations with Bromley Schools Collegiate who manage 5 different organisations: <a href="https://lookback.io/watch/sRRB74G75vSczMrY7">User research session</a></p>
+
+      <p>The design worked without any supporting copy. The separation of organisations was understood by the user.</p>
+
+      <div class="panel panel-wide-border">
+        <blockquote>
+          <p>“Oh lovely, that’s really good”</p>
+          <p>“It’s nice that you don’t have to log in somewhere else”</p>
+        </blockquote>
+      </div>
+
+      <hr />
+
+      <p>Original story: <a href="https://dfedigital.atlassian.net/browse/BATSA-401">BATSA-401</a></p>
 
       <p>When running the prototype, set `multi-organisation` to true in <a href="https://github.com/fofr/manage-courses-prototype/blob/master/lib/prototype_data.json#L2">prototype_data.json</a></p>
     </div>
@@ -54,7 +81,6 @@
   {{ macros.screenshot('Organisations', 'organisations', '/public/images/history/multiple-organisations/thumbnails/01-organisations.png', '/public/images/history/multiple-organisations/01-organisations.png', '
     <p>A list of organisations the user can manage. Sometimes these organisations will have very similar names, eg Chepping View Primary Academy and Chepping View Primary Academy SCITT.</p>
     <p>Include course count as an additional differentiator.</p>
-    <p>Is it possible for an organisation to have no courses?</p>
   ') }}
 
   {{ macros.screenshot('Courses for an organisation', 'courses-for-an-organisation', '/public/images/history/multiple-organisations/thumbnails/02-courses-for-an-organisation.png', '/public/images/history/multiple-organisations/02-courses-for-an-organisation.png', '
